--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,17 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/book-management
 endorsed.classpath=
 excludes=
-file.reference.lombok.jar=../../../../../jar/lombok.jar
-file.reference.lombok.jar-1=jar/lombok.jar
-file.reference.mysql-connector-j-8.2.0.jar=/Users/dungnh/jar/mysql-connector-j-8.2.0.jar
-file.reference.mysql-connector-j-8.2.0.jar-1=jar/mysql-connector-j-8.2.0.jar
+file.reference.lombok.jar=/Users/cuthingoctram/Documents/book-management/jar/lombok.jar
+file.reference.mysql-connector-j-8.2.0.jar=/Users/cuthingoctram/Documents/book-management/jar/mysql-connector-j-8.2.0.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.lombok.jar}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar}:\
-    ${file.reference.lombok.jar-1}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar-1}
+    ${file.reference.mysql-connector-j-8.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
